# meteostat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/aw/: actions-lock.json
.github/workflows/: bug-reproducer.lock.yml  bug-reproducer.md  issue-triage-agent.lock.yml  issue-triage-agent.md  lint.yml  provider-tests.yml  publish.yml  tests.yml  typing.yml
examples/: chart.py  daily.py  gsa.py  hourly.py  interpolation.py  inventory.py  meta.py  metadata.py  monthly.py  nearby.py  normals.py  point.py  provider.py
meteostat/: __init__.py  enumerations.py  typing.py  units.py
meteostat/api/: concat.py  config.py  daily.py  hourly.py  interpolate.py  inventory.py  merge.py  monthly.py  normals.py  station.py  stations.py  timeseries.py
meteostat/core/: cache.py  config.py  data.py  network.py  providers.py  schema.py
meteostat/interpolation/: idw.py  lapserate.py
meteostat/providers/: index.py
meteostat/utils/: conversions.py  data.py  guards.py  parsers.py  types.py
specs/: interpolation.md
tests/: fixtures.py
tests/fixtures/: df_daily.pickle  df_dwd_hourly.pickle  df_dwd_mosmix.pickle  df_dwd_poi.pickle  df_hourly.pickle  df_hourly_10532.pickle  df_hourly_10635.pickle  df_monthly.pickle  station_10637.json
tests/integration/: conftest.py  test_daily.py  test_hourly.py  test_interpolate.py  test_large_request_check.py  test_large_requests.py  test_merge.py  test_monthly.py  test_normals.py  test_station.py  test_stations.py
tests/provider/: conftest.py  test_bulk_daily.py  (+25 more)
(+55 files in other folders)
