[tool.poetry]
name = "meteostat"
version = "2.1.2"
description = "Access and analyze historical weather and climate data with Python."
authors = ["Meteostat", "Christian Lamprecht"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = ">=2.3.0,<4.0.0"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
types-requests = "^2.31.0.20240106"
types-pytz = "^2023.3.1.1"
pytest-mock = "^3.14.0"
ruff = "^0.14.8"
ty = "^0.0.1a33"
pytest-cov = "^7.0.0"

[tool.poetry.group.extras.dependencies]
matplotlib = "^3.9.2"
metar = "^1.11.0"
lxml = "^5.3.0"

[tool.coverage.run]
source = ["meteostat"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
